--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 
 @use './base/base';
 @use './base/typography';
+@use './base/utilities';
 
 @use './layout/nav';
 @use './layout/footer';
@@ -27,3 +28,4 @@
 @use './components/song-row';
 @use './components/heading-buttons';
 @use './components/square-graphic';
+@use './components/spinner';
