--- a/src/scss/abstracts/_animations.scss
+++ b/src/scss/abstracts/_animations.scss
@@ -44,3 +44,12 @@
         text-shadow: 0 0 4rem rgba($col-primary-light, 0.3);
     }
 }
+
+@keyframes spinner {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
