--- a/src/scss/components/_song-card.scss
+++ b/src/scss/components/_song-card.scss
@@ -3,6 +3,7 @@
 .song-card {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     &__image-container {
         width: 100%;
@@ -35,8 +36,51 @@
         font-size: 1.6rem;
     }
 
+    &__label {
+        margin-top: 0.75rem;
+        font-weight: 600;
+        font-size: 1.4rem;
+        text-align: center;
+    }
+
     &__artists {
         font-size: 1.4rem;
         color: $col-dark-4;
+    }
+
+    &__track {
+        position: relative;
+        @include flexCenter;
+
+        &::after,
+        &::before {
+            content: '';
+            position: absolute;
+            transition: 0.2s ease;
+            opacity: 0;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+
+            background-color: rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(3px);
+        }
+
+        &:hover {
+            &::before {
+                opacity: 1;
+            }
+        }
+    }
+
+    &__track:hover &__track-icon {
+        opacity: 1;
     }
 }
