--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -17,3 +17,15 @@
     align-items: center;
     justify-content: center;
 }
+
+@mixin lineClamp($lines) {
+    display: -webkit-box;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+@mixin placeholder($transparency) {
+    background-color: rgba(0, 0, 0, $transparency);
+    border-radius: 4px;
+}
