--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -216,12 +216,53 @@
     }
 
     &__lower-bottom {
-        padding: 3rem 0;
+        padding: 2rem 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
         p {
             font-size: 1.4rem;
             color: $col-dark-3;
         }
+    }
+
+    &__current-song {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 1.5rem;
+
+        // background-color: rgba($col-primary, 0.3);
+        // padding: 1.5rem 1.5rem 1.5rem 2rem;
+        // border-radius: $radius;
+        // border: 2px solid rgba($col-primary, 0.1);
+    }
+
+    &__current-song-image {
+        width: 64px;
+        height: 64px;
+        box-shadow: $shadow, inset 0 0 0 1px rgba($col-primary, 0.3);
+        display: block;
+        border-radius: $radius;
+    }
+    &__current-song-info {
+        display: flex;
+        flex-direction: column;
+        text-align: right;
+        justify-content: center;
+    }
+
+    &__current-song-name {
+        font-weight: 700;
+        font-size: 1.5rem;
+        // text-transform:uppercase
+        margin-bottom: 0.3rem;
+        color: $col-dark-1;
+    }
+
+    &__current-song-artists {
+        color: $col-dark-3;
+        font-size: 1.4rem;
     }
 }
 
