--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -25,6 +25,16 @@
 
     &__main {
         flex: 1;
+
+        @include respond(992) {
+            display: none;
+        }
+    }
+
+    &__side {
+        @include respond(992) {
+            display: none;
+        }
     }
 
     &__link-list {
@@ -90,7 +100,6 @@
                 }
             }
         }
-
         &--fill {
             padding: 1.2rem 2rem;
             background-color: $col-primary;
@@ -108,6 +117,44 @@
         &:not(&--fill):not(&--icon):hover {
             color: $col-primary;
             background-color: rgba($col-primary, 0.1);
+        }
+    }
+    &__hamburger {
+        display: none;
+
+        margin-left: auto;
+        margin-right: 1rem;
+
+        width: 25px;
+        height: 16px;
+
+        position: relative;
+
+        @include respond(992) {
+            display: flex;
+        }
+
+        $thickness: 2px;
+
+        span {
+            display: block;
+            width: 100%;
+            height: $thickness;
+            background-color: $col-dark-3;
+
+            position: absolute;
+
+            &:nth-of-type(1) {
+                top: 0;
+            }
+
+            &:nth-of-type(2) {
+                top: calc(50% - #{$thickness / 2});
+            }
+
+            &:nth-of-type(3) {
+                top: calc(100% - #{$thickness});
+            }
         }
     }
 }
