--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -4,8 +4,9 @@
     color: #fff;
     background-color: $col-dark-1;
     padding: 0.5rem 1.5rem;
-    border-radius: 0.4rem;
-    display: inline-block;
+    border-radius: 0.3rem;
+    display: inline-flex;
+    align-items: center;
 
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -19,5 +20,15 @@
 
     &--shadow {
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.07);
+    }
+
+    &--border {
+        border: 1px solid transparent;
+    }
+
+    svg {
+        width: 1.6rem;
+        height: 1.6rem;
+        margin-right: 0.8rem;
     }
 }
