--- a/src/scss/components/_masonry.scss
+++ b/src/scss/components/_masonry.scss
@@ -2,16 +2,16 @@
 
 .masonry {
     display: flex;
-    margin-left: -$gutter;
+    margin-left: -3rem;
     width: auto;
 
     &__column {
-        padding-left: $gutter;
+        padding-left: 3rem;
         background-clip: padding-box;
     }
 
     /* Style your items */
     &__column > div {
-        margin-bottom: $gutter;
+        margin-bottom: 3rem;
     }
 }
