--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -47,7 +47,7 @@
     }
 
     &__margin {
-        @include margin(1400);
+        @include margin($margin);
         @include respond(1500) {
             width: 100%;
         }
