--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,3 +33,4 @@
 @use './components/tag-filter';
 @use './components/masonry';
 @use './components/project-card';
+@use './components/featured-card';
