--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $col-dark-2: #0f1221;
 $col-dark-3: #5b5675;
 $col-dark-4: rgba(#101322, 0.6);
 
+$margin: 1300;
 $gutter: 3rem;
 
 $radius: 0.3rem;
