--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -26,6 +26,12 @@
         border: 1px solid transparent;
     }
 
+    &--small {
+        padding: 0.4rem 1rem;
+        font-size: 1rem;
+        text-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
+    }
+
     svg {
         width: 1.6rem;
         height: 1.6rem;
