--- a/src/scss/components/_project-card.scss
+++ b/src/scss/components/_project-card.scss
@@ -1,18 +1,83 @@
 @use '../abstracts' as *;
 
 .project-card {
-    background-color: #fff;
+    background-color: $col-dark-1;
     box-shadow: $shadow;
     border-radius: $radius;
     overflow: hidden;
 
+    padding: $gutter;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    &__header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+    }
+
+    &__logo-container {
+        width: 32px;
+        height: 32px;
+
+        svg {
+            width: 100%;
+            height: 100%;
+            color: lighten($col-primary, 5%);
+        }
+    }
+
+    &__link-list {
+        display: flex;
+        gap: 1.5rem;
+    }
+
+    &__link {
+        svg {
+            width: 24px;
+            height: 24px;
+            color: rgba(255, 255, 255, 0.6);
+
+            transition: 0.2s ease;
+        }
+
+        &:hover svg {
+            color: rgba(255, 255, 255, 0.9);
+        }
+    }
+
+    &__title {
+        color: rgba(255, 255, 255, 0.9);
+        font-weight: 700;
+        font-size: 2rem;
+    }
+
+    &__description {
+        color: rgba(255, 255, 255, 0.6);
+        font-size: 1.5rem;
+    }
+
+    &__badge-list {
+        margin-top: 1rem;
+        position: relative;
+        z-index: 2;
+        display: flex;
+        flex-flow: row wrap;
+        gap: 0.5rem;
+    }
+
     &__image {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top;
     }
 
     &__info {
         padding: 1.5rem;
-        background-color: $col-light-1;
         color: $col-dark-1;
 
         p {
@@ -20,11 +85,5 @@
             color: $col-dark-4;
             font-size: 1.5rem;
         }
-    }
-
-    &__badge-list {
-        display: flex;
-        flex-flow: row wrap;
-        gap: 8px;
     }
 }
