--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -5,10 +5,7 @@
     box-shadow: -10px 10px 40px 0 rgba(56, 50, 124, 0.08);
 
     &__inner {
-        width: 1600px;
-        max-width: 100%;
-        margin: 0 auto;
-
+        @include margin($margin);
         padding: 3rem 1.5rem;
 
         display: flex;
