--- a/src/scss/components/_square-graphic.scss
+++ b/src/scss/components/_square-graphic.scss
@@ -13,8 +13,8 @@
 
     &__inner {
         position: absolute;
-        width: 50%;
-        height: 50%;
+        width: 55%;
+        height: 55%;
         border: 1.5rem solid rgba($col-primary, 0.07);
         border-radius: 1rem;
         transform: translate(-50%, -50%);
@@ -39,10 +39,11 @@
         justify-content: center;
 
         &:nth-of-type(2) {
-            transform: translate(10px, 10px);
+            transform: translate(10px, 20px);
         }
+
         &:nth-of-type(3) {
-            transform: translate(-10px, -20px);
+            transform: translate(-10px, 0);
         }
         &:nth-of-type(4) {
             transform: translate(20px, 5px);
