--- a/src/scss/pages/_pg-my-work.scss
+++ b/src/scss/pages/_pg-my-work.scss
@@ -30,6 +30,47 @@
     }
 
     &__project-list {
-        margin: $gutter * 1.5 0;
+        margin: $gutter 0;
+    }
+
+    &__filter-text {
+        color: rgba(0, 0, 0, 0.6);
+        font-weight: 500;
+        text-align: center;
+        margin-top: $gutter;
+
+        & > span {
+            display: inline-flex;
+            align-items: center;
+            span {
+                color: rgba(0, 0, 0, 0.8);
+                padding: 0.1rem 0.5rem;
+                border-radius: 2px;
+                border-width: 1px;
+                border-style: solid;
+                font-size: 1.1rem;
+                font-weight: 500;
+
+                display: inline-block;
+
+                cursor: pointer;
+                transition: 0.2s ease;
+
+                &:hover {
+                    transform: translateY(-1px);
+                    color: rgba(0, 0, 0, 0.9);
+                }
+            }
+
+            &:not(:last-of-type) {
+                margin-right: 0.5rem;
+            }
+
+            &:not(:first-of-type):last-of-type::before {
+                content: ' or ';
+                display: inline-block;
+                margin-right: 0.5rem;
+            }
+        }
     }
 }
