--- a/src/scss/components/_featured-card.scss
+++ b/src/scss/components/_featured-card.scss
@@ -30,8 +30,17 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         border: 1px solid rgba(0, 0, 0, 0.12);
 
-        &--overlay {
-        }
+        // &::after {
+        //     content: '';
+        //     display: block;
+        //     position: absolute;
+        //     z-index: 1;
+        //     width: 100%;
+        //     height: 100%;
+        //     left: 0;
+        //     top: 0;
+        //     backdrop-filter: blur(5px);
+        // }
     }
 
     &__image {
