added nav links, removed duplicate blog posts

--- a/src/scss/pages/_pg-blog.scss
+++ b/src/scss/pages/_pg-blog.scss
@@ -1,6 +1,7 @@
-@use '../abstracts'as *;
+@use '../abstracts' as *;
 
 .pg-blog {
+    margin-bottom: $gutter;
     &__container {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
