refactored some components, added contact page functionality

--- a/src/scss/components/_btn.scss
+++ b/src/scss/components/_btn.scss
@@ -9,6 +9,8 @@
 
     transition: background-color 0.1s ease;
 
+    cursor: pointer;
+
     &:hover {
         background-color: $col-primary-light;
         color: #fff;
