--- a/src/scss/components/_jumbotron.scss
+++ b/src/scss/components/_jumbotron.scss
@@ -44,6 +44,9 @@
         align-self: flex-end;
         position: relative;
 
+        // height: 378.5px;
+        // width: 600px;
+
         & > div:first-of-type {
             display: block !important;
         }
