--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -16,6 +16,10 @@
         &--100 {
             flex: 1 1 100%;
         }
+
+        @include respond(576) {
+            flex: 1 1 100%;
+        }
     }
 
     &__label {
@@ -69,12 +73,19 @@
     }
 
     &__message {
+        margin: 0;
+        font-size: 1.4rem;
+        transform: translateY(-0.3rem);
+        text-align: center;
+        width: 100%;
+
         &--error {
-            color: red;
+            color: rgb(255, 54, 54);
+            font-weight: 600;
         }
 
         &--success {
-            color: green;
+            color: rgb(26, 199, 92);
         }
     }
 }
