--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -100,6 +100,8 @@
         font-size: 1.4rem;
         color: $col-dark-3;
         transition: 0.2s ease;
+
+        @include lineClamp(2);
     }
     &__link:hover &__link-text {
         color: $col-light-4;
