added functionality to github commit graph

--- a/src/scss/components/_git-commit-graph.scss
+++ b/src/scss/components/_git-commit-graph.scss
@@ -7,5 +7,6 @@
     &__box {
         background-color: $col-primary;
         border-radius: 0.2rem;
+        border: 1px solid rgba($col-primary, 0.2);
     }
 }
