--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @use './layout/nav';
 @use './layout/footer';
 @use './layout/section';
+@use './layout/sidenav';
 
 @use './pages/pg-index';
 @use './pages/pg-blog';
