--- a/src/scss/components/_spinner.scss
+++ b/src/scss/components/_spinner.scss
@@ -13,4 +13,11 @@
     animation: spinner 1s infinite;
 
     grid-column: 1 / -1;
+
+    &--small {
+        border: 5px solid rgba(0255, 255, 255, 0.7);
+        border-top-color: $col-primary;
+        width: 40px;
+        height: 40px;
+    }
 }
