--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -34,6 +34,10 @@
         box-shadow: 0 -10px 30px rgba(0, 0, 0, 0.05);
     }
 
+    &--perspective {
+        perspective: 1300px;
+    }
+
     &__wave {
         position: absolute;
         bottom: 100%;
