--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -169,24 +169,24 @@
             }
         }
 
-        &--active {
-            span {
-                &:nth-of-type(1),
-                &:nth-of-type(3) {
-                    top: calc(50% - #{$thickness / 2});
-                }
+        // &--active {
+        //     span {
+        //         &:nth-of-type(1),
+        //         &:nth-of-type(3) {
+        //             top: calc(50% - #{$thickness / 2});
+        //         }
 
-                &:nth-of-type(1) {
-                    transform: rotate(45deg);
-                }
-                &:nth-of-type(3) {
-                    transform: rotate(-45deg);
-                }
+        //         &:nth-of-type(1) {
+        //             transform: rotate(45deg);
+        //         }
+        //         &:nth-of-type(3) {
+        //             transform: rotate(-45deg);
+        //         }
 
-                &:nth-of-type(2) {
-                    opacity: 0;
-                }
-            }
-        }
+        //         &:nth-of-type(2) {
+        //             opacity: 0;
+        //         }
+        //     }
+        // }
     }
 }
