--- a/src/scss/layout/_sidenav.scss
+++ b/src/scss/layout/_sidenav.scss
@@ -2,15 +2,66 @@
 
 .sidenav {
     background-color: $col-light-1;
+    box-shadow: -5px 0 20px rgba(0, 0, 0, 0.2);
     width: 300px;
     height: 100%;
+    max-width: 70%;
 
-    transform: translateX(100%);
+    display: flex;
+    flex-direction: column;
+
+    transform: translateX(-100%);
+
+    padding: $gutter;
+
+    cursor: default;
 
     transition: 0.3s ease;
 
     &__container--active & {
         transform: translateX(0);
+    }
+
+    &__close {
+        display: block;
+
+        width: 25px;
+        height: 25px;
+
+        position: absolute;
+        z-index: 999;
+        top: 3.5rem;
+        right: 5.4rem;
+
+        $thickness: 2px;
+
+        color: $col-light-3;
+        cursor: pointer;
+
+        &:hover {
+            color: $col-light-2;
+        }
+
+        &::after,
+        &::before {
+            content: '';
+            display: block;
+            width: 100%;
+            height: $thickness;
+            background-color: currentColor;
+
+            position: absolute;
+            transition: 0.15s ease;
+
+            top: calc(50% - #{$thickness / 2});
+        }
+
+        &::after {
+            transform: rotate(45deg);
+        }
+        &::before {
+            transform: rotate(-45deg);
+        }
     }
 
     &__container {
@@ -25,7 +76,7 @@
 
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: flex-start;
 
         opacity: 0;
         visibility: hidden;
@@ -36,6 +87,80 @@
             opacity: 1;
             visibility: visible;
             cursor: crosshair;
+        }
+    }
+
+    &__logo {
+        display: block;
+        margin: $gutter / 2 0 $gutter * 1.5 0;
+        svg {
+            height: 5rem;
+        }
+    }
+
+    &__list-title {
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-size: 1.2rem;
+        margin-top: $gutter;
+        margin-bottom: 1.5rem;
+        margin-left: 0.8rem;
+        color: rgba(0, 0, 0, 0.6);
+        font-weight: 600;
+    }
+    &__list {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+    }
+
+    &__item {
+    }
+
+    &__link {
+        display: flex;
+        align-items: center;
+
+        gap: 1.5rem;
+        padding: 0.8rem;
+
+        font-size: 1.8rem;
+        color: rgba(0, 0, 0, 0.8);
+
+        border-radius: $radius;
+
+        svg {
+            width: 2.4rem;
+            fill: currentColor;
+        }
+
+        &:hover {
+            background-color: rgba($col-primary, 0.2);
+            color: $col-primary;
+        }
+    }
+
+    &__footer {
+        margin-top: auto;
+    }
+
+    &__socials-list {
+        display: flex;
+        gap: 2rem;
+        margin: 0 1rem;
+    }
+
+    &__socials-link {
+        color: rgba(0, 0, 0, 0.5);
+
+        &:hover {
+            color: $col-dark-1;
+        }
+        svg {
+            width: 2rem;
+            height: 2rem;
+            fill: currentColor;
         }
     }
 }
