--- a/src/scss/layout/_sidenav.scss
+++ b/src/scss/layout/_sidenav.scss
@@ -31,7 +31,7 @@
         position: absolute;
         z-index: 999;
         top: 3.5rem;
-        right: 5.4rem;
+        right: 4rem;
 
         $thickness: 2px;
 
@@ -92,9 +92,9 @@
 
     &__logo {
         display: block;
-        margin: $gutter / 2 0 $gutter * 1.5 0;
+        margin: 0 0 0 0;
         svg {
-            height: 5rem;
+            height: 4rem;
         }
     }
 
@@ -104,7 +104,6 @@
         font-size: 1.2rem;
         margin-top: $gutter;
         margin-bottom: 1.5rem;
-        margin-left: 0.8rem;
         color: rgba(0, 0, 0, 0.6);
         font-weight: 600;
     }
@@ -113,6 +112,7 @@
         flex-direction: column;
         gap: 1rem;
         width: 100%;
+        transform: translateX(-1rem);
     }
 
     &__item {
@@ -123,7 +123,7 @@
         align-items: center;
 
         gap: 1.5rem;
-        padding: 0.8rem;
+        padding: 0.6rem 1.5rem;
 
         font-size: 1.8rem;
         color: rgba(0, 0, 0, 0.8);
@@ -148,7 +148,6 @@
     &__socials-list {
         display: flex;
         gap: 2rem;
-        margin: 0 1rem;
     }
 
     &__socials-link {
