--- a/src/scss/pages/_pg-listening.scss
+++ b/src/scss/pages/_pg-listening.scss
@@ -148,7 +148,7 @@
         display: grid;
         grid-template-columns: 100%;
         grid-gap: $gutter;
-        padding: $gutter * 2 0;
+        // padding: $gutter * 2 0;
     }
 
     &__body-section {
