fixed blog post responsiveness

--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -20,6 +20,8 @@
 
     &__list {
         display: flex;
+        flex-flow: row wrap;
+
         align-items: center;
         margin: 0 -1rem;
     }
