--- a/src/scss/components/_blog-card.scss
+++ b/src/scss/components/_blog-card.scss
@@ -54,6 +54,11 @@
             margin-right: 0;
         }
 
+        @include respond(450) {
+            height: auto;
+            aspect-ratio: 1 /1;
+        }
+
         svg {
             width: 25rem;
         }
