--- a/src/scss/pages/_pg-blog.scss
+++ b/src/scss/pages/_pg-blog.scss
@@ -13,6 +13,10 @@
         margin: 5rem auto;
         max-width: 100%;
 
+        @include respond(1200) {
+            width: 100%;
+        }
+
         p {
             font-size: 1.8rem;
         }
