--- a/src/scss/components/_breadcrumbs.scss
+++ b/src/scss/components/_breadcrumbs.scss
@@ -34,7 +34,7 @@
 
         text-transform: uppercase;
         letter-spacing: 1px;
-        font-size: 12px;
+        font-size: 1.3rem;
         font-weight: 700;
 
         color: rgba(0, 0, 0, 0.8);
@@ -45,14 +45,14 @@
     }
     &__home {
         color: $col-primary !important;
-        font-size: 16px;
+        font-size: 1.6rem;
     }
 
     &__link {
         margin-right: 2rem;
         color: $col-primary;
         font-weight: 700;
-        font-size: 12px;
+        font-size: 1.3rem;
 
         &:hover {
             &,
