added blog posts to supabase, refactored tag filter

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -27,3 +27,24 @@ p {
     color: $col-primary;
     font-size: 1.4rem;
 }
+
+.centered-header {
+    text-align: center;
+
+    width: 70rem;
+    max-width: 100%;
+    margin: 0 auto $gutter auto;
+
+    @include respond(992) {
+        width: 100%;
+    }
+
+    h1 {
+        margin: 0;
+    }
+
+    p {
+        font-size: 2rem;
+        margin: 1.5rem 0 0 0;
+    }
+}
