--- a/src/scss/components/_featured-card.scss
+++ b/src/scss/components/_featured-card.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: $gutter;
+    padding: 0 $gutter $gutter $gutter;
     gap: $gutter;
 
     width: 1200px;
