--- a/src/scss/components/_tag-filter.scss
+++ b/src/scss/components/_tag-filter.scss
@@ -8,7 +8,6 @@
 
     background-color: rgba(17, 13, 138, 0.08);
     box-shadow: 0 4px 0 0 rgba(17, 13, 138, 0.15);
-    margin-bottom: 4px;
 
     border: 1px solid transparent;
 
@@ -51,6 +50,8 @@
         max-width: 100%;
         margin: 0 auto;
 
+        margin-bottom: $gutter * 2;
+
         @include respond(1200) {
             width: 100%;
             gap: 0.6rem;
@@ -58,5 +59,47 @@
     }
 
     &__item {
+    }
+
+    &__text {
+        color: rgba(0, 0, 0, 0.6);
+        font-weight: 500;
+        text-align: center;
+        margin-top: -$gutter;
+        margin-bottom: $gutter;
+
+        & > span {
+            display: inline-flex;
+            align-items: center;
+            span {
+                color: rgba(0, 0, 0, 0.8);
+                padding: 0.1rem 0.5rem;
+                border-radius: 2px;
+                border-width: 1px;
+                border-style: solid;
+                font-size: 1.1rem;
+                font-weight: 500;
+
+                display: inline-block;
+
+                cursor: pointer;
+                transition: 0.2s ease;
+
+                &:hover {
+                    transform: translateY(-1px);
+                    color: rgba(0, 0, 0, 0.9);
+                }
+            }
+
+            &:not(:last-of-type) {
+                margin-right: 0.5rem;
+            }
+
+            &:not(:first-of-type):last-of-type::before {
+                content: ' or ';
+                display: inline-block;
+                margin-right: 0.5rem;
+            }
+        }
     }
 }
