--- a/src/scss/pages/_pg-blog.scss
+++ b/src/scss/pages/_pg-blog.scss
@@ -4,7 +4,7 @@
     margin-bottom: $gutter;
     &__container {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
         grid-gap: $gutter * 1.5;
     }
 
