--- a/src/scss/components/_tag-filter.scss
+++ b/src/scss/components/_tag-filter.scss
@@ -102,4 +102,11 @@
             }
         }
     }
+
+    &__box {
+        width: 8px;
+        height: 8px;
+        border-radius: 2px;
+        margin-right: 8px;
+    }
 }
