--- a/src/scss/abstracts/_animations.scss
+++ b/src/scss/abstracts/_animations.scss
@@ -22,6 +22,30 @@
     }
 }
 
+@keyframes fade-in-rotate {
+    0% {
+        transform: translateY(10px) rotate(20deg);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0) rotate(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        transform: translateY(10px);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 @keyframes tooltip-in {
     0% {
         opacity: 0;
