--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @use './pages/pg-listening';
 @use './pages/pg-my-work';
 @use './pages/pg-contact';
+@use './pages/pg-404';
 
 @use './components/jumbotron';
 @use './components/git-commit-graph';
