--- a/src/scss/layout/_section.scss
+++ b/src/scss/layout/_section.scss
@@ -4,6 +4,9 @@
     position: relative;
     padding: $gutter 0 $gutter 0;
 
+    display: flex;
+    flex-direction: column;
+
     &--wave {
         margin: 10rem 0 0 0;
 
@@ -36,6 +39,10 @@
 
     &--perspective {
         perspective: 1300px;
+    }
+
+    &--grow {
+        flex: 1;
     }
 
     &__wave {
