--- a/src/scss/components/_tag-filter.scss
+++ b/src/scss/components/_tag-filter.scss
@@ -6,6 +6,8 @@
     padding: 5px 10px;
     border-radius: 3px;
 
+    margin-bottom: 0.4rem;
+
     background-color: rgba(17, 13, 138, 0.08);
     box-shadow: 0 4px 0 0 rgba(17, 13, 138, 0.15);
 
