--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -223,8 +223,13 @@
         align-items: center;
         justify-content: space-between;
 
+        @include respond(576) {
+            flex-direction: column;
+            gap: 2rem;
+        }
+
         p {
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             color: $col-dark-3;
         }
     }
@@ -241,8 +246,8 @@
     }
 
     &__current-song-image {
-        width: 64px;
-        height: 64px;
+        width: 48px;
+        height: 48px;
         box-shadow: $shadow, inset 0 0 0 1px rgba($col-primary, 0.3);
         display: block;
         border-radius: $radius;
