--- a/src/scss/pages/_pg-index.scss
+++ b/src/scss/pages/_pg-index.scss
@@ -10,6 +10,7 @@
             grid-template-columns: 100%;
             grid-gap: $gutter;
             width: 100%;
+            margin: -$gutter 0;
         }
 
         p {
@@ -59,6 +60,10 @@
 
     &__section-heading {
         font-size: 3.2rem;
+
+        @include respond(576) {
+            font-size: 2.8rem;
+        }
     }
 
     &__section-icon-container {
