fixed safari footer image bug

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -158,6 +158,7 @@
 
         svg {
             width: 1.6rem;
+            height: 1.6rem;
             fill: rgba(0, 0, 0, 0.6);
             display: block;
             padding: 1.2rem;
